@@ -1,3 +1,10 @@
+
+2012-01-05  Lynn Garren
+
+     * GenParticle.h, GenVertex.h, PdfInfo.h, SimpleVector.h, SimpleVector.icc:
+       Rename local variables to avoid shadowing class variables.
+       This problem surfaces when compiling with -Wshadow.
+
   --------------------------  HepMC-2.06.06  --------------------------
 
 2011-11-09  Lynn Garren
